samples/_failures_safe/1761274672_6e3d1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_148427b2.c: In function ‘main’:
./samples/SAFE/__tmp_148427b2.c:185:5: error: expected expression at end of input
  185 |     if (
      |     ^~
./samples/SAFE/__tmp_148427b2.c:185:5: error: expected declaration or statement at end of input
